# terra-benchmark

./: CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  blog.md  pyproject.toml
.github/ISSUE_TEMPLATE/: leaderboard_submission.md  task_proposal.md
.github/workflows/: leaderboard.yml  validate.yml
.mplconfig/: fontlist-v330.json
benchmark/: __init__.py  assets.py  score.py  spec_data.py
docs/: benchmark-spec.md  cad-standards.md  fabrication-guide.md  leaderboard-policy.md  measurement-protocol.md  morphology-normalization.md  versioning-policy.md
docs/paper-template/: required_disclosures.md  terra.bib  terra_results_template.tex
leaderboard/: README.md  SUBMISSION_GUIDE.md  leaderboard.json
leaderboard/entries/: 2025-04-atlassim-locopolicy-terra-ref.json  2025-04-h1-labbaseline-terra-ref.json
results/: baseline-summary.json
schemas/: leaderboard_entry.schema.json  run_manifest.schema.json  score_report.schema.json  task_spec.schema.json  trial_metrics.schema.json
scripts/: bootstrap_benchmark.py  build_leaderboard.py  render_benchmark_overview.py
sequences/: TERRA-Standard-Chain.yaml
tasks/T1_steady_walking/: assembly.md  bom.csv  task_spec.yaml
tasks/T2_narrow_placement/: assembly.md  bom.csv  task_spec.yaml
tasks/T3_standard_ascent/: assembly.md  task_spec.yaml
tasks/T4_standard_descent/: assembly.md  bom.csv  task_spec.yaml
tasks/T5_height_anomaly/: assembly.md  bom.csv  task_spec.yaml
tasks/T6_discrete_crossing/: assembly.md  bom.csv  task_spec.yaml
tasks/T7_repeated_obstacles/: assembly.md  bom.csv  task_spec.yaml
(+53 files in other folders)
